@@ -135,15 +135,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) strict content-length parsing
-     trunk patch http://svn.apache.org/r1877954
-                 http://svn.apache.org/r1877955
-                 http://svn.apache.org/r1879369
-                 http://svn.apache.org/r1879373
-     2.4.x patch: http://people.apache.org/~ylavic/patches/httpd-2.4.x-ap_parse_strict_length.patch
-    +1: ylavic, minfrin, jim
-    ylavic: the patch drops changes to apreq, which seems to not be in 2.4.
-
   *) core: Drop an invalid Last-Modified header value coming
      from a (F)CGI script instead of replacing it with Unix epoch.
      Warn the users about Last-Modified header value replacements
